Updated separator css to prevent separator from being out of place

--- a/src/components/popupmenu/_popupmenu.scss
+++ b/src/components/popupmenu/_popupmenu.scss
@@ -427,6 +427,8 @@
   .separator {
     border-bottom: 1px solid $popupmenu-border-color;
     margin: 5px 0;
+    position: sticky;
+    left: 0;
 
     &:first-child {
       border: medium none;
